# pybackstock

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  Procfile  README.md  REPORT_FIX_ASSURANCE.md  REPORT_FIX_V2.md  config.py  inventory.csv  inventoryApp.py  manage.py  models.py  openapi.yaml  pyproject.toml  render.yaml  requirements.txt  test_production_simulation.py
.github/workflows/: database-clear.yml  deploy.yml  lint.yml  test.yml  typecheck.yml  webpage-validation.yml
demo/: __init__.py  demo.py  sample_data.csv
migrations/versions/: 3d7f8a5e9c12_add_inventory_fields.py
scripts/: start.py
src/: __init__.py
src/backstock/: __init__.py  app.py  config.py  models.py
src/pybackstock/: __init__.py  app.py  connexion_app.py  grocery_corpus.py  models.py  random_items.py
src/pybackstock/api/: handlers.py
templates/: index.html  report.html
tests/: __init__.py  conftest.py  test_add_random_button.py  test_analytics.py  test_api_handlers.py  test_app_functions.py  test_config.py  test_connexion_health.py  test_demo.py  test_deployment.py  test_health_integration.py  test_models.py  test_random_items.py  test_report_e2e.py  test_report_integration.py  test_routes.py  test_security.py  test_tooltips_e2e.py  test_webpage_content.py
wiki/: Home.md
wiki/deployment/: Backup-and-Restore.md  Database-Rotation.md  Quick-Reference.md  README.md  Render-Setup.md  Troubleshooting.md
